# LinkSphere

./: .gitignore  CHANGELOG.md
backend/: Cargo.toml  Dockerfile  linksphere_logs.md
backend/src/: error.rs  logging.rs  main.rs
backend/src/database/: db.rs  queries.rs
backend/src/handlers/: auth.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: auth.rs  category.rs  link.rs  mod.rs  tag.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  categories.rs  links.rs  mod.rs  profile.rs  root.rs  tags.rs  users.rs
backend/src/services/: auth.rs  cleanup.rs  email.rs  jwt.rs  mod.rs  password.rs
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx
my-link-uploader/: Dockerfile  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
my-link-uploader/package/: index.html
my-link-uploader/package/assets/: index-BxXwq6Qr.js  index-CgJaxBXZ.css  index-DxBNcfAu.js  index-ukrdmldU.js
my-link-uploader/src/: App.tsx  main.tsx
my-link-uploader/src/components/: AdminDashboard.tsx  CategoriesManager.tsx  HomePage.tsx  Layout.tsx  LinkCard.tsx  PasswordStrengthIndicator.tsx  ProfileManager.tsx  TagsManager.tsx  ThemeProvider.tsx  UploadForm.tsx  UserDashboard.tsx
my-link-uploader/src/pages/auth/: Login.tsx  Signup.tsx
my-link-uploader/src/pages/dashboard/: UploadPage.tsx
my-link-uploader/src/services/: api.ts  auth.service.ts  categories.service.ts  links.service.ts  profile.service.ts  tags.service.ts
my-link-uploader/src/utils/: api.ts
