[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
axum = { version = "0.6.20", features = ["macros", "headers"] } # Web framework
axum-extra = { version = "0.4.2", features = ["cookie"] } # Additional axum features including cookies
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "tls-native-tls", "uuid" ] } # Database toolkit with TLS support
dotenvy = "0.15" # For loading .env files
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For JSON handling
chrono = { version = "0.4", features = ["serde"] } # For timestamp handling
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tower-cookies = "0.9.0" # For cookie handling
jsonwebtoken = "9.2" # For JWT handling
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] } # For email sending
rand = "0.8" # For OTP generation
argon2 = "0.5" # For password hashing
async-trait = "0.1" # For async traits
headers = "0.3.8" # For HTTP headers
validator = { version = "0.16", features = ["derive"] } # For input validation
regex = "1.10" # For regex validation
lazy_static = "1.4" # For static regex compilation
uuid = { version = "1.6", features = ["v4", "serde"] } # For UUID generation

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
